<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:tileMode="repeat"
    tools:context=".MainIntro" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/suitstrans" />

    <TextView
        android:id="@+id/textViewPokerSquares"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/poker_squares"
        android:textColor="@color/white"
        android:textSize="43sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="187dp" >

            <Button
                android:id="@+id/buttonNewGame"
                android:layout_width="fill_parent"
                android:layout_height="65dp"
                android:background="@drawable/btn_red"
                android:gravity="center_vertical|center_horizontal"
                android:shadowColor="@color/black"
                android:shadowRadius="4"
                android:text="@string/new_game"
                android:textColor="@color/white"
                android:textSize="28sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp" >

            <Button
                android:id="@+id/buttonContinue"
                android:layout_width="200dp"
                android:layout_height="65dp"
                android:background="@drawable/btn_green"
                android:gravity="center_vertical|center_horizontal"
                android:shadowColor="@color/black"
                android:shadowRadius="4"
                android:text="@string/Continue"
                android:textColor="@color/white"
                android:textSize="28sp" />

        </TableRow>
    </LinearLayout>

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="115dp"
        android:src="@drawable/suitstrans" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="54dp"
        android:layout_height="72dp"
        android:layout_gravity="fill"
        android:contentDescription="@string/card_description"
        android:src="@drawable/acespadestr"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/ImageView02"
        android:layout_width="54dp"
        android:layout_height="72dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="233dp"
        android:contentDescription="@string/card_description"
        android:src="@drawable/aceheartstr"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/ImageView03"
        android:layout_width="54dp"
        android:layout_height="72dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="233dp"
        android:layout_marginTop="380dp"
        android:contentDescription="@string/card_description"
        android:src="@drawable/acediamondstr"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/ImageView04"
        android:layout_width="54dp"
        android:layout_height="72dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="380dp"
        android:contentDescription="@string/card_description"
        android:src="@drawable/aceclubstr"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ImageView03"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="Please enter your name" >

        <requestFocus />
    </EditText>

</RelativeLayout>