<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="false"
    android:layout_alignParentTop="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:tileMode="repeat"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearlayout0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/view5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:paddingTop="5dp"
            android:text="@string/zero_default"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/view6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:text="@string/zero_default"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/view7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:text="@string/zero_default"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/view8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:text="@string/zero_default"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/view9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:text="@string/zero_default"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout0"
        android:layout_centerInParent="true"
        android:gravity="center" >

        <TextView
            android:id="@+id/view0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="7dp"
            android:text="@string/zero_default"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/r1c1"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:contentDescription="@string/card_description"
            android:src="@drawable/topbvert" />
        
        <ImageView
            android:id="@+id/r1c2"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:contentDescription="@string/card_description"
            android:src="@drawable/toprvert" />
        
        <ImageView
            android:id="@+id/r1c3"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/topbvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r1c4"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/toprvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r1c5"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/topbvert" 
            android:contentDescription="@string/card_description"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerInParent="true"
        android:gravity="center" >

        <TextView
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="7dp"
            android:text="@string/zero_default"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/r2c1"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/toprvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r2c2"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/topbvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r2c3"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/toprvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r2c4"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/topbvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r2c5"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/toprvert" 
            android:contentDescription="@string/card_description"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout01"
        android:layout_centerInParent="true"
        android:gravity="center"  >

        <TextView
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingRight="7dp"
            android:text="@string/zero_default"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/r3c1"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/topbvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r3c2"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/toprvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r3c3"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/topbvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r3c4"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/toprvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r3c5"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/topbvert" 
            android:contentDescription="@string/card_description"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout02"
        android:layout_centerInParent="true"
        android:gravity="center"  >

        <TextView
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="7dp"
            android:text="@string/zero_default"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/r4c1"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/toprvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r4c2"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/topbvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r4c3"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/toprvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r4c4"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/topbvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r4c5"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/toprvert" 
            android:contentDescription="@string/card_description"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout03"
        android:layout_centerInParent="true"
        android:gravity="center"  >

        <TextView
            android:id="@+id/view4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="7dp"
            android:text="@string/zero_default"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/r5c1"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/topbvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r5c2"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/toprvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r5c3"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/topbvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r5c4"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/toprvert" 
            android:contentDescription="@string/card_description"/>

        <ImageView
            android:id="@+id/r5c5"
            android:layout_width="54dp"
            android:layout_height="72dp"
            android:background="#80000000"
            android:src="@drawable/topbvert" 
            android:contentDescription="@string/card_description"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/deckView"
        android:layout_width="54dp"
        android:layout_height="72dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/LinearLayout04"
        android:contentDescription="@string/card_description"
        android:src="@drawable/bjoker" />

    <TextView
        android:id="@+id/textTotalString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textTotal"
        android:layout_alignLeft="@+id/LinearLayout04"
        android:text="@string/total"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/deckView"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textTotalString"
        android:text="@string/zero_default"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

</RelativeLayout>